# async-deep-agents

./: .env.example  .gitignore  Makefile  README.md  langgraph.json  langgraph.ts.json
docs/: deployment.md  how-it-works.md
graphs/python/: pyproject.toml
graphs/python/src/: agent.py  coder.py  researcher.py
graphs/python/src/middleware/: __init__.py  completion_notifier.py  max_concurrent_async_tasks.py
graphs/python/tests/: test_max_concurrent_async_tasks.py
graphs/typescript/: package.json  pnpm-lock.yaml  tsconfig.json
graphs/typescript/src/: agent.ts  coder.ts  researcher.ts
graphs/typescript/src/middleware/: completionNotifier.ts  maxConcurrentAsyncTasks.ts
