[project]
name = "async-subagents"
version = "0.1.0"
description = "Async subagents reference architecture for LangGraph Platform"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4.0",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.19",
    "langgraph>=1.1.2",
    "langgraph-sdk>=0.3,<0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
